main mo overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,7 @@ header .topset {
 
 
 #section1 {
+    overflow-x: hidden;
 }
 #section1 .container {
 }
